fixed overflow issue and import order of the css files

--- a/styles/carousel.css
+++ b/styles/carousel.css
@@ -5,7 +5,7 @@
 
 .carousel {
     display: flex;
-    column-gap: 0.5rem;
+    gap: 0.5rem;
     width: 90vw;
     overflow-x: auto;
     scroll-behavior: smooth;
