--- a/styles/footer.css
+++ b/styles/footer.css
@@ -310,11 +310,11 @@ footer {
     text-align: left;
     font-size: var(--size-h2-mb);
     margin: 0;
-    padding: 40px 20px;
+    padding: 40px 0;
     color: #1a1a1a;
     font-weight:700;
     font-family: var(--font-thunder);
-    letter-spacing: -4px;
+    letter-spacing: -1px;
 }
 
 .Urban-performance-section{
@@ -568,7 +568,7 @@ footer {
     color:var(--color-grey);
     margin: 0;
     padding: 0;
-    letter-spacing: -4px;
+    letter-spacing: -1px;
     
 }
 
@@ -582,7 +582,7 @@ footer {
     color:var(--color-grey);
     margin: 0;
     padding: 0;
-    letter-spacing: -4px;
+    letter-spacing: -1px;
 }
 
 .sustain-header {
