--- a/styles/main.css
+++ b/styles/main.css
@@ -8,6 +8,7 @@
 }
 body {
   padding: 0;
+  margin:0;
 }
 html {
   font-size: 62.5%;
